objects/obj800__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <label>field3</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>